fix: Kludge the nav-footer so that it moves up to avoid too much bottom margin in the main block of the text (must be bootstrap default in quarto).

--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,10 @@ sidebar .quarto-alternate-notebooks ul li a, .sidebar .quarto-alternate-formats 
 
 /* Footer {{{ */
 
+.nav-footer {
+    margin-top: -75px;
+}
+
 .nav-footer a {
     color: #757575;
 }
